@@ -1,3 +1,8 @@
+2008-11-01  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/graph3d.c: More bugfixes affecting key placement.
+	Bug #2163532
+
 2008-10-31  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/graph3d.c (do_3dplot): Draw key entry line samples for pm3d
